# lunor

./: README.md  next.config.js  nllb-backend.spec  package-lock.json  package.json  postcss.config.mjs  tailwind.config.js  tailwind.config.ts  test.py
app/: globals.css  layout.tsx  page.tsx
public/: output.css
scripts/backend/: Dockerfile  main.py  nllb-backend.spec  requirements.txt  run_server.py  setup.sh
src-tauri/: Cargo.toml  backend_runtime_log.txt  build.rs  tauri.conf.json
src-tauri/src/: main.rs
