[package]
name = "nllb-translator"
version = "1.0.0"
description = "AI-powered offline translation app"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
repository = "https://github.com/yourusername/nllb-translator"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "system-tray", "fs-remove-dir", "fs-read-file", "fs-write-file", "fs-read-dir", "fs-create-dir", "fs-copy-file", "fs-rename-file", "fs-exists", "dialog-open", "fs-remove-file", "dialog-save", "shell-open", "path-all", "global-shortcut-all", "http-all", "os-all", "notification-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
thiserror = "1.0"
dirs = "5.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
